--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
      "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+      "start": "npm run build && vite preview --port 3000"
   },
   "repository": {
     "type": "git",
