--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
      "dev": "vite",
     "build": "vite build",
-      "start": "npm run build"
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "repository": {
     "type": "git",
